# neurotheon

./: .gitignore  README.md  pyproject.toml
data/: episodes.csv
notebook/: error_analyses.ipynb
notebooks/: neurotheon.ipynb
src/agents/: callback_csv.py  callback_kills.py  callback_stats.py  callback_vecnorm.py  curriculum.py  train.py
src/envs/: sensors.py  turret_env.py
src/sim/: live_monitor.py  pygame_visual.py  saliency.py  viewer_cam.py
src/testing/: play_trained_model.py
tests/: test_curriculum_callback.py  test_device_auto.py  test_env.py  test_env_basic.py
