[project]
name = "rllab"
version = "0.1.0"
description = "Reinforcement Learning Lab"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gymnasium[mujoco]>=1.2.0",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.4",
    "matplotlib>=3.10.3",
    "moviepy==1.0.3",
    "numpy>=2.2.6",
    "pygame>=2.6.1",
    "pytest>=8.4.1",
    "rich>=14.0.0",
    "tensorboard>=2.19.0",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
]

# ---------- tell setuptools that code lives in src/ ----------
[tool.setuptools]
package-dir = {"" = "src"}          # <- you already had this

[tool.setuptools.packages.find]     # <- ADD this block
where = ["src"]                     # search only inside src/

# ---------- specify the build backend ----------
[build-system]                      # <- ADD this block
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
