[project]
name = "nrth"
version = "0.2.1"
description = "Neurotheon: Modern friend-or-foe"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gymnasium>=0.29",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.4",
    "matplotlib>=3.10.3",
    "moviepy==1.0.3",
    "numpy>=2.2.6",
    "plotnine>=0.14.6",
    "pygame>=2.6.1",
    "pytest>=8.4.1",
    "rich>=14.0.0",
    "seaborn>=0.13.2",
    "stable-baselines3[extra]>=2.3.0",
    "tensorboard>=2.19.0",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
    "wandb>=0.21.0",
]

# ---------- tell setuptools that code lives in src/ ----------
[tool.setuptools]
package-dir = {"" = "src"}         

[tool.setuptools.packages.find]     
where = ["src"]                     

# ---------- specify the build backend ----------
[build-system]                      
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
